--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@codemirror/view": "^6.38.6",
     "alpinejs": "^3.15.1",
     "astro": "^5.6.1",
+    "astro-embed": "^0.9.2",
     "sharp": "^0.34.2"
   },
   "devDependencies": {
